correctly delete note captions, fdo#64068

This fixes fdo#64068 and correctly without reintroducing the crash with
Undo/Redo.

Change-Id: I9ad48f6dbb7f1587985f8da9eba3886dfd4068de